update same packages

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^2.11.6",
+    "@clerk/clerk-expo": "^2.14.25",
     "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "^5.1.4",
     "@react-native-async-storage/async-storage": "2.1.2",
@@ -24,10 +24,12 @@
     "@sanity/client": "^7.3.0",
     "@sanity/image-url": "^1.1.0",
     "@tabler/icons-react": "^3.33.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "buffer": "^6.0.3",
-    "date-fns": "^4.1.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.13",
-    "expo": "~53.0.9",
+    "expo": "53.0.22",
     "expo-auth-session": "~6.1.5",
     "expo-blur": "~14.1.4",
     "expo-clipboard": "^7.1.4",
@@ -54,6 +56,7 @@
     "lucide-react-native": "^0.511.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
+    "react-dom": "^19.1.1",
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-native": "0.79.2",
