--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-native": "0.79.2",
     "react-native-app-onboard": "^0.1.9",
     "react-native-calendars": "^1.1313.0",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-gifted-chat": "^2.8.1",
