--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-clipboard/clipboard": "^1.16.2",
     "@react-native-picker/picker": "^2.11.0",
-    "@react-navigation/bottom-tabs": "^7.3.13",
+    "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.3.2",
     "@sanity/client": "^7.3.0",
     "@sanity/image-url": "^1.1.0",
@@ -30,7 +30,7 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.13",
     "expo": "53.0.22",
-    "expo-auth-session": "~6.1.5",
+    "expo-auth-session": "~6.2.1",
     "expo-blur": "~14.1.4",
     "expo-clipboard": "^7.1.4",
     "expo-constants": "~17.1.6",
@@ -38,32 +38,31 @@
     "expo-file-system": "~18.1.10",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.1.7",
+    "expo-image": "^2.4.0",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^14.1.4",
     "expo-linking": "~7.1.5",
     "expo-media-library": "^17.1.6",
     "expo-notifications": "~0.31.2",
-    "expo-router": "~5.0.6",
-    "expo-secure-store": "~14.2.3",
+    "expo-router": "~5.1.5",
+    "expo-secure-store": "~14.2.4",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
-    "expo-system-ui": "~5.0.7",
+    "expo-system-ui": "~5.0.11",
     "expo-updates": "~0.28.13",
-    "expo-web-browser": "~14.1.6",
+    "expo-web-browser": "~14.2.0",
     "i18next": "^25.1.3",
     "lucide-react-native": "^0.511.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
-    "react-dom": "^19.1.1",
+    "react-dom": "19.0.0",
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.5",
     "react-native-app-onboard": "^0.1.9",
     "react-native-calendars": "^1.1313.0",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-gifted-chat": "^2.8.1",
     "react-native-heroicons": "^4.0.0",
@@ -72,10 +71,9 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-star-rating-widget": "^1.9.2",
-    "react-native-svg": "^15.12.0",
-    "react-native-swiper": "^1.6.0",
+    "react-native-svg": "15.11.2",
     "react-native-tabler-icons": "^1.0.3",
     "react-native-text-input-interactive": "^0.1.5",
     "react-native-timeline-flatlist": "^0.8.0",
